Overhaul and add more fromXml() negative tests
Make CommonRegenTest have more of the features in it, and update the
tests to match. Add more tests.

Also, throw RegenerationException when a PersistenceException is caught
in XmlPersistor.fromXml().